// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchPage > should call search action with name and strength from query params 1`] = `
<div>
  <div
    data-testid="search-page"
  >
    <div
      data-testid="custom-jumbotron-mock"
    />
    <nav
      aria-label="breadcrumb"
      class="my-5"
      data-slot="breadcrumb"
    >
      <ol
        class="text-muted-foreground flex flex-wrap items-center gap-1.5 text-sm break-words sm:gap-2.5"
        data-slot="breadcrumb-list"
      >
        <li
          class="inline-flex items-center gap-1.5"
          data-slot="breadcrumb-item"
        >
          <a
            class="hover:text-foreground transition-colors"
            data-discover="true"
            data-slot="breadcrumb-link"
            href="/"
          >
            Home
          </a>
        </li>
        <li
          aria-hidden="true"
          class="[&>svg]:size-3.5"
          data-slot="breadcrumb-separator"
          role="presentation"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-slash"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 2 2 22"
            />
          </svg>
        </li>
        <li
          class="inline-flex items-center gap-1.5"
          data-slot="breadcrumb-item"
        >
          <a
            class="hover:text-foreground transition-colors text-black font-semibold"
            data-slot="breadcrumb-link"
          >
            Search
          </a>
        </li>
      </ol>
    </nav>
    <div
      class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-8"
    >
      <div
        class="bg-accent animate-pulse h-32 rounded-xl"
        data-slot="skeleton"
      />
      <div
        class="bg-accent animate-pulse h-32 rounded-xl"
        data-slot="skeleton"
      />
      <div
        class="bg-accent animate-pulse h-32 rounded-xl"
        data-slot="skeleton"
      />
      <div
        class="bg-accent animate-pulse h-32 rounded-xl"
        data-slot="skeleton"
      />
    </div>
    <div
      data-testid="search-controls-mock"
    />
    <div
      class="flex items-center justify-between mb-4"
    >
      <p
        class="text-sm text-muted-foreground"
        data-testid="result-count"
      >
        Searching...
      </p>
    </div>
    <div
      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-8"
    >
      <div
        class="space-y-3 rounded-xl border bg-white p-4"
      >
        <div
          class="bg-accent animate-pulse h-56 w-full rounded-lg"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-md h-6 w-3/4"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-md h-4 w-1/2"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-md h-20 w-full"
          data-slot="skeleton"
        />
      </div>
      <div
        class="space-y-3 rounded-xl border bg-white p-4"
      >
        <div
          class="bg-accent animate-pulse h-56 w-full rounded-lg"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-md h-6 w-3/4"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-md h-4 w-1/2"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-md h-20 w-full"
          data-slot="skeleton"
        />
      </div>
      <div
        class="space-y-3 rounded-xl border bg-white p-4"
      >
        <div
          class="bg-accent animate-pulse h-56 w-full rounded-lg"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-md h-6 w-3/4"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-md h-4 w-1/2"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-md h-20 w-full"
          data-slot="skeleton"
        />
      </div>
      <div
        class="space-y-3 rounded-xl border bg-white p-4"
      >
        <div
          class="bg-accent animate-pulse h-56 w-full rounded-lg"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-md h-6 w-3/4"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-md h-4 w-1/2"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-md h-20 w-full"
          data-slot="skeleton"
        />
      </div>
      <div
        class="space-y-3 rounded-xl border bg-white p-4"
      >
        <div
          class="bg-accent animate-pulse h-56 w-full rounded-lg"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-md h-6 w-3/4"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-md h-4 w-1/2"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-md h-20 w-full"
          data-slot="skeleton"
        />
      </div>
      <div
        class="space-y-3 rounded-xl border bg-white p-4"
      >
        <div
          class="bg-accent animate-pulse h-56 w-full rounded-lg"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-md h-6 w-3/4"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-md h-4 w-1/2"
          data-slot="skeleton"
        />
        <div
          class="bg-accent animate-pulse rounded-md h-20 w-full"
          data-slot="skeleton"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchPage > should render SearchPage with default snapshot 1`] = `
<div>
  <div
    data-testid="search-page"
  >
    <div
      data-testid="custom-jumbotron-mock"
    />
    <nav
      aria-label="breadcrumb"
      class="my-5"
      data-slot="breadcrumb"
    >
      <ol
        class="text-muted-foreground flex flex-wrap items-center gap-1.5 text-sm break-words sm:gap-2.5"
        data-slot="breadcrumb-list"
      >
        <li
          class="inline-flex items-center gap-1.5"
          data-slot="breadcrumb-item"
        >
          <a
            class="hover:text-foreground transition-colors"
            data-discover="true"
            data-slot="breadcrumb-link"
            href="/"
          >
            Home
          </a>
        </li>
        <li
          aria-hidden="true"
          class="[&>svg]:size-3.5"
          data-slot="breadcrumb-separator"
          role="presentation"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-slash"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 2 2 22"
            />
          </svg>
        </li>
        <li
          class="inline-flex items-center gap-1.5"
          data-slot="breadcrumb-item"
        >
          <a
            class="hover:text-foreground transition-colors text-black font-semibold"
            data-slot="breadcrumb-link"
          >
            Search
          </a>
        </li>
      </ol>
    </nav>
    <div
      class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-8"
    >
      <div
        class="bg-accent animate-pulse h-32 rounded-xl"
        data-slot="skeleton"
      />
      <div
        class="bg-accent animate-pulse h-32 rounded-xl"
        data-slot="skeleton"
      />
      <div
        class="bg-accent animate-pulse h-32 rounded-xl"
        data-slot="skeleton"
      />
      <div
        class="bg-accent animate-pulse h-32 rounded-xl"
        data-slot="skeleton"
      />
    </div>
    <div
      data-testid="search-controls-mock"
    />
    <div
      class="flex flex-col items-center justify-center text-center py-16 px-4"
    >
      <div
        class="bg-muted rounded-full p-6 mb-4"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sparkles h-10 w-10 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
          />
          <path
            d="M20 2v4"
          />
          <path
            d="M22 4h-4"
          />
          <circle
            cx="4"
            cy="20"
            r="2"
          />
        </svg>
      </div>
      <h3
        class="text-xl font-semibold mb-2"
      >
        Find your hero
      </h3>
      <p
        class="text-muted-foreground max-w-md mb-6"
      >
        Type a name, adjust filters, or find your favorite hero and villain from the universe.
      </p>
    </div>
  </div>
</div>
`;
